[metadata]
name = getrandompcmol
version = attr: getrandompcmol.__version__.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = "Marcel Müller"
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    getrandompcmol = getrandompcmol:console_entry_point

[options.extras_require]
dev =
    black
    pre-commit
    pylint
